# sve_design_project

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/include/kusv_msgs/: DR_data.h  LanePointData.h  LanePointDataArray.h  OptimalBehavior.h  PlanningControl.h  PlanningLiDAR.h  PlanningLocalization.h  PlanningVision.h  PolyfitLaneData.h  PolyfitLaneDataArray.h  VisionMark.h  kusv_CanInfo.h  kusv_GlobalPose.h
devel/include/mavros_msgs/: ADSBVehicle.h  ActuatorControl.h  Altitude.h  AttitudeTarget.h  BatteryStatus.h  CamIMUStamp.h  CommandBool.h  CommandBoolRequest.h  CommandBoolResponse.h  CommandCode.h  CommandHome.h  CommandHomeRequest.h  CommandHomeResponse.h  CommandInt.h  CommandIntRequest.h  CommandIntResponse.h  CommandLong.h  CommandLongRequest.h  CommandLongResponse.h  CommandTOL.h  CommandTOLRequest.h  CommandTOLResponse.h  CommandTriggerControl.h  CommandTriggerControlRequest.h  (+131 more)
logs/path_generator/: build.cmake.000.log.stderr
logs/pose_estimation/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/sve_design_control/: build.make.000.log.stderr
logs/ydlidar/: build.make.000.log.stderr
src/: .rosinstall
src/control/: tmp
src/control/sve_design_control/: CMakeLists.txt
src/control/sve_design_control/launch/: keyboard_interface_control.launch
src/control/sve_design_control/src/: control_node.cpp  keyboard_interface.cpp  local_waypoint_follower.cpp  rosserial_test_node.cpp
src/planning/: tmp
src/vision_detection/: tmp
(+1287 files in other folders)
